enable tech stack on mobile and fix about text size

--- a/src/components/styles/About.css
+++ b/src/components/styles/About.css
@@ -32,12 +32,13 @@
 
 @media only screen and (max-width: 480px) {
   .about-me h3 {
-    font-size: 18px;
+    font-size: 16px;
     letter-spacing: 4px;
   }
   .about-me p {
-    font-size: 22px;
-    line-height: 28px;
+    font-size: 16px;
+    line-height: 22px;
+    font-weight: 500;
   }
   .about-me {
     padding: 30px 0px;
